fixed alignment

--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ form header img {
     width: 100%;
     height: 100%;
     filter: brightness(40%);
-    border-radius: 10px 10px 0 0;
+    border-radius: 8px 8px 0 0;
+    object-fit: cover;
 }
 
 form header .heading {
@@ -97,7 +98,7 @@ form .fields > .input-group textarea::placeholder {
 
 form button {
     margin-top: 1rem;
-    margin-left: 102px;
+    margin-left: 130px;
     display: inline-flex;
     align-items: center;
     padding: .8rem 2.2rem;
